# safe_chat

./: .gitignore  Book.md  CMakeLists.txt  JSON.md  class.md  enum.md  readme.md  s.py  s.sh  use.md
Client/: CMakeLists.txt  doc.dot  icons.qrc  readme.md  test.cpp
Client/GUI/: CMakeLists.txt
Client/GUI/include/: widget_base.h  widget_const.h  widget_head.h  widget_login.h
Client/GUI/src/: main.cpp  widget_base.cpp  widget_head.cpp  widget_login.cpp
Client/etc/: client.conf
Client/html/: Layout_8cpp.html  Layout_8cpp__incl.map  Layout_8cpp__incl.md5  Layout_8h.html  Layout_8h__dep__incl.map  Layout_8h__dep__incl.md5  Layout_8h__incl.map  Layout_8h__incl.md5  Layout_8h_source.html  Line_8cpp.html  Line_8cpp__incl.map  Line_8cpp__incl.md5  Line_8h.html  Line_8h__dep__incl.map  Line_8h__dep__incl.md5  Line_8h__incl.map  Line_8h__incl.md5  Line_8h_source.html  _2home_2pxy_2qt_test_2src_2utils_2interface_8h-example.html  _2home_2pxy_2work_2safe_chat_2Client_2src_2utils_2interface_8h-example.html  add__fd__page_8cpp.html  add__fd__page_8cpp__incl.map  add__fd__page_8cpp__incl.md5  add__fd__page_8h.html  add__fd__page_8h__dep__incl.map  add__fd__page_8h__dep__incl.md5  add__fd__page_8h__incl.map  add__fd__page_8h__incl.md5  add__fd__page_8h_source.html  addfrienddialog_8cpp.html  addfrienddialog_8cpp__incl.map  addfrienddialog_8cpp__incl.md5  addfrienddialog_8h.html  addfrienddialog_8h__dep__incl.map  addfrienddialog_8h__dep__incl.md5  addfrienddialog_8h__incl.map  addfrienddialog_8h__incl.md5  addfrienddialog_8h_source.html  annotated.html  annotated_dup.js  (+1105 more)
Client/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+93 more)
Client/include/: C_Args.h  C_Conf.h
Client/latex/: Layout_8cpp.tex  Layout_8cpp__incl.md5  Layout_8h.tex  Layout_8h__dep__incl.md5  Layout_8h__incl.md5  Line_8cpp.tex  Line_8cpp__incl.md5  Line_8h.tex  Line_8h__dep__incl.md5  Line_8h__incl.md5  _2home_2pxy_2qt_test_2src_2utils_2interface_8h-example.tex  _2home_2pxy_2work_2safe_chat_2Client_2src_2utils_2interface_8h-example.tex  add__fd__page_8cpp.tex  add__fd__page_8cpp__incl.md5  add__fd__page_8h.tex  add__fd__page_8h__dep__incl.md5  add__fd__page_8h__incl.md5  addfrienddialog_8cpp.tex  addfrienddialog_8cpp__incl.md5  addfrienddialog_8h.tex  addfrienddialog_8h__dep__incl.md5  addfrienddialog_8h__incl.md5  annotated.tex  app__event_8h.tex  args_8cpp.tex  args_8cpp__incl.md5  args_8h.tex  args_8h__dep__incl.md5  args_8h__incl.md5  base__service_8h.tex  base__service_8h__dep__incl.md5  btn__base_8h.tex  btn__base_8h__dep__incl.md5  btn__base_8h__incl.md5  bubble__msg_8cpp.tex  bubble__msg_8cpp__incl.md5  bubble__msg_8h.tex  bubble__msg_8h__dep__incl.md5  bubble__msg_8h__incl.md5  card_8cpp.tex  (+450 more)
Client/src/: C_Conf.cpp  args.cpp  args.h  config.h  config_ui.h  main.cpp
Client/src/Chat/: chat.cpp  chat.h  chatid.cpp  chatid.h  friend.cpp  friend.h  group.cpp  group.h
Client/src/Core/: core.cpp  core.h  core_fd.h  core_ftp.h  core_gp.h  core_history.h  core_recore.h  core_self.h  readme.md
Client/src/Data/: core_sql.cpp  core_sql.h
Client/src/Main/: main_wid.cpp  main_wid.h  widget.cpp  widget.h
Client/src/Model/Add/: add_fd_page.cpp  add_fd_page.h
Client/src/Model/Base/: Layout.cpp  Layout.h  Line.cpp  Line.h  btn_base.h  label_photo.cpp  label_photo.h  label_role.cpp  label_role.h  my_frame.h  wid_base.cpp  wid_base.h  widget_blank.cpp  widget_blank.h
Client/src/Model/Card/: fd_card.cpp  fd_card.h
Client/src/Model/ChatBar/: chat_btm.cpp  chat_btm.h  chat_default.h  chat_mid.cpp  chat_mid.h  chat_page.cpp  chat_page.h  chat_top.cpp  chat_top.h
Client/src/Model/ChatBar/bubble/: bubble_msg.cpp  bubble_msg.h
Client/src/Model/Ftp/: ftp_page.cpp  ftp_page.h
Client/src/Model/Group/: gp_member.cpp  gp_member.h  member.cpp  member.h
Client/src/Model/ListBar/: core_list.cpp  core_list.h  fd_list.cpp  fd_list.h  gp_list.cpp  gp_list.h  list_page.cpp  list_page.h
Client/src/Model/ListBar/Item/: core_list_item.cpp  core_list_item.h  fd_list_item.cpp  fd_list_item.h  gp_list_item.cpp  gp_list_item.h
Client/src/Model/TitleBar/: title_bar.cpp  title_bar.h  title_btn.h
Client/src/Model/ToolBar/: tool_btn.cpp  tool_btn.h  tool_page.cpp  tool_page.h
Client/src/Model/test/: wid_test.cpp  wid_test.h
Client/src/Service/: base_service.h  const_json.h  core_protocol.cpp  core_protocol.h  protocol.cpp  protocol.h
Client/src/Service/Net/: httpmanager.cpp  httpmanager.h  test.cpp  test.h
Client/src/Setting/: core_setting.cpp  core_setting.h  isystem_setting.h  setting.cpp  setting.h
Client/src/utils/: interface.h  tool.cpp  tool.h
Client/src/widget/form/: addfrienddialog.cpp  addfrienddialog.h  addfrienddialog.ui  rmchatdialog.cpp  rmchatdialog.h
Tool/: list.h  my_const.h  my_log.h  my_sm4.h  my_tool.h  single_model.h
cmake/: GlobalConfig.cmake
demo/: CMakeLists.txt  s.py  test.cpp
release/Linux/etc/: client.conf  client.js  sql_script.sql
release/Linux/etc/Qss/: ComBox.qss  QLabel.qss  QTextEdit.qss
release/Linux/include/: ThreadPool.h  single_model.h
release/Linux/include/curl/: curlver.h
release/Linux/lib/: libgmssl.so.3
release/linux/etc/: etc_client.conf
release/linux/include/: mem_pool.h  my_ini.h
release/linux/lib/: libcurl.so.4.8.0
